--- a/bibliography.bib
+++ b/bibliography.bib
@@ -793,7 +793,7 @@ journal={L'Intermédiaire des Mathématiciens},
 @article{marinotti2013,
   title={The genome of Anopheles darlingi, the main neotropical malaria vector},
   author={Marinotti, Osvaldo and Cerqueira, Gustavo C and De Almeida, Luiz Gonzaga Paula and Ferro, Maria In{\^e}s Tiraboschi and Loreto, Elgion Lucio da Silva and Zaha, Arnaldo and Teixeira, Santuza MR and Wespiser, Adam R and Almeida e Silva, Alexandre and Schlindwein, Aline Daiane and others},
-  journal={Nucleic acids research},
+  journal={Nucleic Acids Research},
   volume={41},
   number={15},
   pages={7387--7400},
@@ -1236,6 +1236,18 @@ year = {2019}
   year={2018},
   publisher={Nature Publishing Group}
 }
+
+@article{merqury,
+  title={Merqury: reference-free quality, completeness, and phasing assessment for genome assemblies},
+  author={Rhie, Arang and Walenz, Brian P and Koren, Sergey and Phillippy, Adam M},
+  journal={Genome Biology},
+  volume={21},
+  number={1},
+  pages={1--27},
+  year={2020},
+  publisher={BioMed Central}
+}
+
 
 @article{allhic,
   title={{Assembly of allele-aware, chromosomal-scale autopolyploid genomes based on Hi-C data}},
@@ -2807,6 +2819,30 @@ year = {1998}
   publisher={National Acad Sciences}
 }
 
+@article{myxozoa_cnidaria,
+  title={{Genomic insights into the evolutionary origin of Myxozoa within Cnidaria}},
+  author={Chang, E Sally and Neuhof, Moran and Rubinstein, Nimrod D and Diamant, Arik and Philippe, Herv{\'e} and Huchon, Doroth{\'e}e and Cartwright, Paulyn},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={48},
+  pages={14912--14917},
+  year={2015},
+  publisher={National Acad Sciences}
+}
+
+
+@article{hoilungia_hongkongiensis,
+  title={Comparative genomics and the nature of placozoan species},
+  author={Eitel, Michael and Francis, Warren R and Varoqueaux, Frederique and Daraspe, Jean and Osigus, Hans-J{\"u}rgen and Krebs, Stefan and Vargas, Sergio and Blum, Helmut and Williams, Gray A and Schierwater, Bernd and others},
+  journal={PLoS Biology},
+  volume={16},
+  number={7},
+  pages={1-36},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+
 @article{hydra_oligactis,
   title = {An evolutionarily-conserved {W}nt3/$\beta$-catenin/{S}p5 feedback loop restricts head organizer activity in {H}ydra.},
   author = {Vogg, Matthias C. and Beccari, Leonardo and Iglesias Ollé, Laura and Rampon, Christine and Vriz, Sophie and Perruchoud, Chrystelle and Wenger, Yvan and Galliot, Brigitte},
@@ -3057,6 +3093,63 @@ year = {2019}
   year={2019},
   publisher={American Association for the Advancement of Science}
 }
+
+@article{hypsibius_dujardini1,
+  title={Evidence for extensive horizontal gene transfer from the draft genome of a tardigrade},
+  author={Boothby, Thomas C and Tenlen, Jennifer R and Smith, Frank W and Wang, Jeremy R and Patanella, Kiera A and Nishimura, Erin Osborne and Tintori, Sophia C and Li, Qing and Jones, Corbin D and Yandell, Mark and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={52},
+  pages={15976--15981},
+  year={2015},
+  publisher={National Acad Sciences}
+}
+
+@article{hypsibius_dujardini2,
+  title={No evidence for extensive horizontal gene transfer in the genome of the tardigrade \textit{Hypsibius dujardini}},
+  author={Koutsovoulos, Georgios and Kumar, Sujai and Laetsch, Dominik R and Stevens, Lewis and Daub, Jennifer and Conlon, Claire and Maroon, Habib and Thomas, Fran and Aboobaker, Aziz A and Blaxter, Mark},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={18},
+  pages={5053--5058},
+  year={2016},
+  publisher={National Acad Sciences}
+}
+
+@article{kad,
+  title={{Factorial estimating assembly base errors using \textit{k}-mer abundance difference (KAD) between short reads and genome assembled sequences}},
+  author={He, Cheng and Lin, Guifang and Wei, Hairong and Tang, Haibao and White, Frank F and Valent, Barbara and Liu, Sanzhen},
+  journal={NAR Genomics and Bioinformatics},
+  volume={2},
+  number={3},
+  pages={lqaa075},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{blobtools,
+  title={{BlobTools: Interrogation of genome assemblies}},
+  author={Laetsch, Dominik R and Blaxter, Mark L},
+  journal={F1000Research},
+  volume={6},
+  number={1287},
+  pages={1287},
+  year={2017},
+  publisher={F1000 Research Limited}
+}
+
+@article{blobtoolkit,
+  title={{BlobToolKit--Interactive quality assessment of genome assemblies}},
+  author={Challis, Richard and Richards, Edward and Rajan, Jeena and Cochrane, Guy and Blaxter, Mark},
+  journal={G3: Genes, Genomes, Genetics},
+  volume={10},
+  number={4},
+  pages={1361--1374},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+
 
 @article{complete_human,
 	author = {Nurk, Sergey and Koren, Sergey and Rhie, Arang and Rautiainen, Mikko and Bzikadze, Andrey V. and Mikheenko, Alla and Vollger, Mitchell R. and Altemose, Nicolas and Uralsky, Lev and Gershman, Ariel and Aganezov, Sergey and Hoyt, Savannah J. and Diekhans, Mark and Logsdon, Glennis A. and Alonge, Michael and Antonarakis, Stylianos E. and Borchers, Matthew and Bouffard, Gerard G. and Brooks, Shelise Y. and Caldas, Gina V. and Cheng, Haoyu and Chin, Chen-Shan and Chow, William and de Lima, Leonardo G. and Dishuck, Philip C. and Durbin, Richard and Dvorkina, Tatiana and Fiddes, Ian T. and Formenti, Giulio and Fulton, Robert S. and Fungtammasan, Arkarachai and Garrison, Erik and Grady, Patrick G. S. and Graves-Lindsay, Tina A. and Hall, Ira M. and Hansen, Nancy F. and Hartley, Gabrielle A. and Haukness, Marina and Howe, Kerstin and Hunkapiller, Michael W. and Jain, Chirag and Jain, Miten and Jarvis, Erich D. and Kerpedjiev, Peter and Kirsche, Melanie and Kolmogorov, Mikhail and Korlach, Jonas and Kremitzki, Milinn and Li, Heng and Maduro, Valerie V. and Marschall, Tobias and McCartney, Ann M. and McDaniel, Jennifer and Miller, Danny E. and Mullikin, James C. and Myers, Eugene W. and Olson, Nathan D. and Paten, Benedict and Peluso, Paul and Pevzner, Pavel A. and Porubsky, David and Potapova, Tamara and Rogaev, Evgeny I. and Rosenfeld, Jeffrey A. and Salzberg, Steven L. and Schneider, Valerie A. and Sedlazeck, Fritz J. and Shafin, Kishwar and Shew, Colin J. and Shumate, Alaina and Sims, Yumi and Smit, Arian F. A. and Soto, Daniela C. and Sovic, Ivan and Storer, Jessica M. and Streets, Aaron and Sullivan, Beth A. and Thibaud-Nissen, Francoise and Torrance, James and Wagner, Justin and Walenz, Brian P. and Wenger, Aaron and Wood, Jonathan M. D. and Xiao, Chunlin and Yan, Stephanie M. and Young, Alice C. and Zarate, Samantha and Surti, Urvashi and McCoy, Rajiv C. and Dennis, Megan Y. and Alexandrov, Ivan A. and Gerton, Jennifer L. and O{\textquoteright}Neill, Rachel J. and Timp, Winston and Zook, Justin M. and Schatz, Michael C. and Eichler, Evan E. and Miga, Karen H. and Phillippy, Adam M.},
