--- a/adineta_vaga.tex
+++ b/adineta_vaga.tex
@@ -2,8 +2,8 @@
 
 \chapter{Hi-C scaffolding of the bdelloid rotifer \textit{Adineta vaga}}
 
-Bdelloid rotifers have been drawing interest due to their unusual ancient asexuality. A first diploid assembly of \textit{Adineta vaga} was published in 2013 \cite{flot2013}, with a total length of 218 Megabases (Mb) and a N50 of 260 kilobases (kb), and the genome was described as "incompatible with conventional meiosis". In the following paper, the genome of \textit{Adineta vaga} was assembled \textit{de novo} using PacBio CLR, Nanopore reads, Illumina reads and Hi-C reads. Three assemblies were produced: a collapsed haploid assembly using all types of reads; and two diploid assemblies, one using PacBio CLR obtained with FALCON-Unzip, and the second one using Illumina reads obtained with Bwise. All these assemblies were scaffolded with instaGRAAL, and converged to 6 haploid chromosomes (collapsed assembly) or 12 phased chromosomes (FALCON-Unzip and Bwise assemblies). These results show that the genome of \textit{Adineta vaga} is: diploid, with 6 pairs of chromosomes; a paleotetraploid, as it has homoeologous chromosomes (pairs 1, 2 and 3 are homoeologous to pairs 4, 5, 6 respectively); and compatible with meiosis. \\
-I contributed to this study in the assembly and Hi-C scaffolding of the collapsed haploid assembly. 
+Bdelloid rotifers have been drawing interest due to their unusual ancient asexuality. A first diploid assembly of \textit{Adineta vaga} was published in 2013 \cite{flot2013}, with a total length of 218 Mb and a N50 of 260 kb, and the genome was described as "incompatible with conventional meiosis". In the following paper, the genome of \textit{Adineta vaga} was assembled \textit{de novo} using PacBio CLR, Nanopore reads, Illumina reads and Hi-C reads. Three assemblies were produced: a collapsed haploid assembly using all types of reads; and two diploid assemblies, one using PacBio CLR obtained with FALCON and FALCON-Unzip, and the second one using Illumina reads with Bwise. All these assemblies were scaffolded using instaGRAAL, and converged to 6 haploid chromosomes (collapsed assembly) or 12 phased chromosomes (FALCON-Unzip and Bwise assemblies). These results show that the genome of \textit{Adineta vaga} is: diploid, with 6 pairs of chromosomes; a paleotetraploid, as it has homoeologous chromosomes (pairs 1, 2 and 3 are homoeologous to pairs 4, 5, 6 respectively); and compatible with meiosis. \\
+I contributed to this study in the assembly and Hi-C scaffolding of the collapsed haploid assembly. \\
 
 %\begin{table}
 %\caption{Comparison of assembly statistics with other genomes of the phylum Rotifera.}
